--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
-    "dev:client": "vite",
-    "dev:server": "nodemon server/index.js",
+    "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json && tsc -p tsconfig.node.json"
@@ -15,13 +13,7 @@
     "@sveltejs/vite-plugin-svelte": "^3.1.2",
     "@tailwindcss/forms": "^0.5.9",
     "@tsconfig/svelte": "^5.0.4",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
-    "@types/jsonwebtoken": "^9.0.7",
     "autoprefixer": "^10.4.20",
-    "concurrently": "^9.1.0",
-    "nodemon": "^3.1.7",
     "postcss": "^8.4.47",
     "svelte": "^4.2.19",
     "svelte-check": "^3.8.6",
@@ -31,12 +23,5 @@
     "vite": "^5.4.2"
   },
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "helmet": "^8.0.0",
-    "jsonwebtoken": "^9.0.2",
-    "sqlite3": "^5.1.7"
-  }
+  "dependencies": {}
 }
